force-app/main/default/objects/GoodsPOMaterial__c/GoodsPOMaterial__c.object-meta.xml
<CustomObject>
    <label>Goods P/O+Material</label>
    <nameField>
        <displayFormat>GSMT-{000000}</displayFormat>
        <label>GOODS S/O+MATERIAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods P/O+Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>