force-app/main/default/objects/GoodsPOMaterial__c/fields/GoodsPOID__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOID__c</fullName>
    <label>GOODS P/O ID</label>
    <referenceTo>GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>GOODS P/O+MATERIAL</relationshipLabel>
    <relationshipName>GoodsPOID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>