force-app/main/default/objects/GoodsPOMaterial__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>QUANTITY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>